# mcp-plex

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json
.cursor/: mcp.json
.github/workflows/: docker-publish.yml
docs/: FLOWS.md  SAD.md  TASKS.md
src/plex_mcp/: client.py  config.py  errors.py  server.py
src/plex_mcp/formatters/: duration.py  json_fmt.py  markdown.py
src/plex_mcp/schemas/: common.py  inputs.py  outputs.py
src/plex_mcp/tools/: browse.py  deck.py  details.py  libraries.py  playback.py  search.py  sessions.py
tests/: conftest.py  test_browse.py  test_client.py  test_config.py  test_conftest.py  test_deck.py  test_details.py  test_docker.sh  test_errors.py  test_formatters.py  test_integration.py  test_libraries_clients.py  test_live_docker.py  test_playback.py  test_schemas.py  test_search.py  test_server.py  test_sessions.py
